--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
+
 	<body>
 		<header>
 			<h1>Random Dice</h1>
@@ -15,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Animated,don't click it.
+		    Animated, no need to click.
 	    </footer>
 	</body>
 </html>
