--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
-
+        <style>
+		body{
+			background-color: white;
+		}
+	</style>
 	<body>
 		<header>
 			<h1>Random Dice</h1>
